--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name"> 1 مكتبة ليمان</string>
+    <string name="app_name"> مكتبة أصيل</string>
 
 
 </resources>
